hphp/test/zend/good/Zend/tests/class_alias_016.php.expectf
object(foo\bar) (0) {
}

Fatal error: Class undefined: foo\foo in %s/class_alias_016.php on line 11
